# Video/storage/api-docs/api-docs.json
@@ -1,12 +1,81 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "My First API",
-        "version": "0.1"
+        "title": "Video Platform",
+        "description": "Video Uploading Platform",
+        "contact": {
+            "email": "ravindu1997@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "http://my-default-host.com",
+            "description": "Video Upload API Server"
+        }
+    ],
     "paths": {
-        "/projects": {
+        "/birthdays": {
             "get": {
+                "tags": [
+                    "Employments"
+                ],
+                "summary": "Get birthdays of employmnets",
+                "description": "Returns upcoming birthdays of employments",
+                "parameters": [
+                    {
+                        "name": "company",
+                        "in": "query",
+                        "description": "Company ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "2719cde8-7019-4ca8-81f5-1b6057037307"
+                        }
+                    },
+                    {
+                        "name": "within",
+                        "in": "query",
+                        "description": "Comma seperated date range",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "2018-01-01,2018-12-31"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successull Operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
+        "/video": {
+            "post": {
                 "tags": [
                     "Projects"
                 ],
